--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.2) unstable; urgency=low
+
+  * Sometimes it's a good idea to edit more files than just the changelog
+    before releasing.
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Nov 2005 11:54:46 -0500
+
 debhelper (5.0.1) unstable; urgency=low
 
   * dh_installinfo: Escape section with \Q \E. Closes: #337215
