r1811: * Remove dh_shlibs from binary-indep section of debian/rules. * Add t/syntax to make sure all dh_* commands and the libraries syntax check   ok.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (5.0.3) UNRELEASED; urgency=low
+
+  * Remove dh_shlibs from binary-indep section of debian/rules.
+  * Add t/syntax to make sure all dh_* commands and the libraries syntax check
+    ok.
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  7 Nov 2005 15:17:09 -0500
+
 debhelper (5.0.2) unstable; urgency=low
 
   * Sometimes it's a good idea to edit more files than just the changelog
