--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (5.0.3) UNRELEASED; urgency=low
+debhelper (5.0.3) unstable; urgency=low
 
   * Remove dh_shlibs from binary-indep section of debian/rules.
   * Add t/syntax to make sure all dh_* commands and the libraries syntax check
     ok.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  7 Nov 2005 15:17:09 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon,  7 Nov 2005 15:18:12 -0500
 
 debhelper (5.0.2) unstable; urgency=low
 
