r1814: * Remove hardcoded pathc to update-modules and gconf-schemas in various   script fragments.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.4) UNRELEASED; urgency=low
+
+  * Remove hardcoded pathc to update-modules and gconf-schemas in various
+    script fragments.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  8 Nov 2005 16:02:09 -0500
+
 debhelper (5.0.3) unstable; urgency=low
 
   * Remove dh_shlibs from binary-indep section of debian/rules.
