r1815: * dh_clean: Patch from Matej Vela to clean up autom4te.cache directories   in subdiretories of the source tree and do it all in one enormous,   evil, and fast find expression. Closes: #338193

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,11 @@ debhelper (5.0.4) UNRELEASED; urgency=low
 
   * Remove hardcoded pathc to update-modules and gconf-schemas in various
     script fragments.
+  * dh_clean: Patch from Matej Vela to clean up autom4te.cache directories
+    in subdiretories of the source tree and do it all in one enormous,
+    evil, and fast find expression. Closes: #338193
 
- -- Joey Hess <joeyh@debian.org>  Tue,  8 Nov 2005 16:02:09 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue,  8 Nov 2005 16:16:56 -0500
 
 debhelper (5.0.3) unstable; urgency=low
 
