--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-debhelper (5.0.4) UNRELEASED; urgency=low
+debhelper (5.0.4) unstable; urgency=low
 
-  * Remove hardcoded pathc to update-modules and gconf-schemas in various
+  * Remove hardcoded paths to update-modules and gconf-schemas in various
     script fragments.
   * dh_clean: Patch from Matej Vela to clean up autom4te.cache directories
     in subdiretories of the source tree and do it all in one enormous,
