--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.5) unstable; urgency=low
+
+  * Create Dh_Version.pm before running syntax test. Closes: #338337
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  9 Nov 2005 15:41:06 -0500
+
 debhelper (5.0.4) unstable; urgency=low
 
   * Remove hardcoded paths to update-modules and gconf-schemas in various
