--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.6) unstable; urgency=low
+
+  * Pass --name in debhelper.pod pod2man run. Closes: #338349
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  9 Nov 2005 16:08:27 -0500
+
 debhelper (5.0.5) unstable; urgency=low
 
   * Create Dh_Version.pm before running syntax test. Closes: #338337
