--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (5.0.7) unstable; urgency=low
+
+  * Patch from Valéry Perrin to update Frensh translation, and also update
+    the po4a stuff. Closes: #338713
+  * Fix a bad regexp in -s handling code that breaks if an architecture name,
+    such as i386-uclibc is the hyphenated version of a different arch.
+    Closes: #338555
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 13 Nov 2005 13:28:13 -0500
+
 debhelper (5.0.6) unstable; urgency=low
 
   * Pass --name in debhelper.pod pod2man run. Closes: #338349
