--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -1,3 +1,7 @@
+# translation of fr.po to 
+# translation of fr.po to
+# translation of fr.po to
+# translation of fr.po to
 # translation of fr.po to Français
 # SOME DESCRIPTIVE TITLE
 # Copyright (C) 2005 Free Software Foundation, Inc.
@@ -6,10 +10,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"POT-Creation-Date: 2005-11-08 16:41-0500\n"
-"PO-Revision-Date: 2005-10-22 11:54+0200\n"
-"Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
-"Language-Team: Français <debian-l10n-french@lists.debian.org>\n"
+"POT-Creation-Date: 2005-11-13 13:32-0500\n"
+"PO-Revision-Date: 2005-11-10 17:21+0100\n"
+"Last-Translator: Valery Perrin\n"
+"Language-Team:  <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -514,7 +518,6 @@ msgstr ""
 
 # type: textblock
 #: dh_strip:51
-#, fuzzy
 msgid ""
 "For example, if your packages are lifoo and foo and you want to include a "
 "foo-dbg package with debugging symbols, use dh_strip --dbg-package=foo-dbg."
@@ -2021,22 +2024,22 @@ msgstr ""
 
 # type: textblock
 #: debhelper.pod:247
-#, fuzzy
 msgid ""
 "Tell debhelper what compatibility level to use by writing a number to debian/"
 "compat. For example, to turn on V5 mode:"
 msgstr ""
-"Indique à debhelper le niveau de compatibilité à employer en écrivant un "
-"nombre dans debian/compat. Par exemple, pour imposer la S<version V4 :>"
+"Pour indiquer à debhelper le niveau de compatibilité à utiliser il faut "
+"placer un nombre dans debian/compat. Par exemple, pour imposer la version "
+"S<V5 :>"
 
 # type: verbatim
 #: debhelper.pod:250
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "  % echo 5 > debian/compat\n"
 "\n"
 msgstr ""
-" echo 4 > debian/compat\n"
+" echo 5 > debian/compat\n"
 "\n"
 
 # type: textblock
@@ -2048,6 +2051,13 @@ msgid ""
 "if you are not using the most recent compatability level, you're advised to "
 "read below for notes about what is different in earlier compatability levels."
 msgstr ""
+"Sauf indication contraire, toute la documentation de debhelper suppose "
+"l'utilisation du niveau de compatibilité le plus récent, et, dans la plupart "
+"des cas ne précise pas si le comportement est différent avec les niveaux de "
+"compatibilité antérieurs. De ce fait, si le niveau de compatibilité le plus "
+"récent n'est pas celui utilisé, il est fortement conseillé de lire les "
+"indications ci-dessous qui exposent les différences dans les niveaux de "
+"compatibilité antérieurs."
 
 # type: textblock
 #: debhelper.pod:259
@@ -2142,7 +2152,7 @@ msgstr "V4"
 # type: textblock
 #: debhelper.pod:304
 msgid "Changes from V3 are:"
-msgstr ""
+msgstr "Les changements par rapport à la version 3 S<sont :>"
 
 # type: textblock
 #: debhelper.pod:310
@@ -2185,12 +2195,11 @@ msgstr "V5"
 
 # type: textblock
 #: debhelper.pod:331
-#, fuzzy
 msgid ""
 "This is the recommended mode of operation. It does everything V4 does, plus:"
 msgstr ""
 "C'est la version dont l'usage est recommandé. Elle fait la même chose que la "
-"version V3 S<plus :>"
+"version V4 S<plus :>"
 
 # type: textblock
 #: debhelper.pod:338
@@ -2290,7 +2299,6 @@ msgstr ""
 
 # type: textblock
 #: debhelper.pod:381
-#, fuzzy
 msgid ""
 "Once your package uses debhelper to build, be sure to add debhelper to your "
 "Build-Depends line in debian/control. You should build-depend on a version "
@@ -2302,16 +2310,16 @@ msgstr ""
 "debian/control. Il convient également de s'assurer que la version de "
 "debhelper indiquée dans build-depend est au moins égale au niveau de "
 "compatibilité de debhelper utilisée pour la construction du paquet. Ainsi si "
-"le paquet emploie le niveau 4 de S<compatibilité :>"
+"le paquet emploie le niveau 5 de S<compatibilité :>"
 
 # type: verbatim
 #: debhelper.pod:387
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "  Build-Depends: debhelper (>= 5)\n"
 "\n"
 msgstr ""
-" Build-Depends: debhelper (>= 4)\n"
+" Build-Depends: debhelper (>= 5)\n"
 "\n"
 
 # type: =head1
@@ -5325,9 +5333,3 @@ msgstr ""
 #: dh_installlogcheck:59
 msgid "Jon Middleton <jjm@debian.org>"
 msgstr "Jon Middleton <jjm@debian.org>"
-
-# type: textblock
-#~ msgid "This mode is still under development. Its changes from V4 are:"
-#~ msgstr ""
-#~ "Ce mode est en cours de développement. Les changements par rapport à la "
-#~ "version v4 sont les S<suivants :>"
