r1824: * Man page type fixes (yes, more, nice to know people read the man pages).   Closes: #341289

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -250,10 +250,10 @@ debian/compat. For example, to turn on V5 mode:
   % echo 5 > debian/compat
 
 Unless otherwise indicated, all debhelper documentation assumes that you
-are using the most recent compatability level, and in most cases does not
-indicate if the behavior is different in an earlier compatability level, so
-if you are not using the most recent compatability level, you're advised to
-read below for notes about what is different in earlier compatability
+are using the most recent compatibility level, and in most cases does not
+indicate if the behavior is different in an earlier compatibility level, so
+if you are not using the most recent compatibility level, you're advised to
+read below for notes about what is different in earlier compatibility
 levels.
 
 These are the available compatibility levels:
