--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.8) UNRELEASED; urgency=low
+
+  * Man page type fixes (yes, more, nice to know people read the man pages).
+    Closes: #341289
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 29 Nov 2005 17:25:45 -0500
+
 debhelper (5.0.7) unstable; urgency=low
 
   * Patch from Valéry Perrin to update Frensh translation, and also update
