--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-debhelper (5.0.8) UNRELEASED; urgency=low
+debhelper (5.0.8) unstable; urgency=low
 
   * Man page type fixes (yes, more, nice to know people read the man pages).
     Closes: #341289
+  * dh_installdocs: Make -X also exclude matching doc-base files from being
+    installed. Closes: #342033
 
- -- Joey Hess <joeyh@debian.org>  Tue, 29 Nov 2005 17:25:45 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon,  5 Dec 2005 14:31:23 -0500
 
 debhelper (5.0.7) unstable; urgency=low
 
