--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (5.0.9) unstable; urgency=low
+
+  * dh_installmodules: always run depmod, since if module-init-tools but not
+    modutils is installed, it will not get run by update-modules.
+    Closes: #339658
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  8 Dec 2005 13:04:11 -0500
+
 debhelper (5.0.8) unstable; urgency=low
 
   * Man page type fixes (yes, more, nice to know people read the man pages).
