--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.10) unstable; urgency=low
+
+  * dh_installdocs: Fix bug introduced by empty file skipping that prevented
+    errors for nonexistent files. Closes: #342729
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  9 Dec 2005 18:05:15 -0500
+
 debhelper (5.0.9) unstable; urgency=low
 
   * dh_installmodules: always run depmod, since if module-init-tools but not
