--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.11) unstable; urgency=low
+
+  * French translation update. Closes: #344133
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 20 Dec 2005 14:40:25 -0500
+
 debhelper (5.0.10) unstable; urgency=low
 
   * dh_installdocs: Fix bug introduced by empty file skipping that prevented
