--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -1,19 +1,12 @@
-# translation of fr.po to 
-# translation of fr.po to
-# translation of fr.po to
-# translation of fr.po to
-# translation of fr.po to Français
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) 2005 Free Software Foundation, Inc.
+# Translation of debhelper manpages to French
 # Valery Perrin <valery.perrin.debian@free.fr>, 2005.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
-"POT-Creation-Date: 2005-12-05 14:32-0500\n"
-"PO-Revision-Date: 2005-11-10 17:21+0100\n"
-"Last-Translator: Valery Perrin\n"
-"Language-Team:  <debian-l10n-french@lists.debian.org>\n"
+"Project-Id-Version: debhelper manpages\n"
+"POT-Creation-Date: 2005-12-09 18:08-0500\n"
+"PO-Revision-Date: 2005-12-20 10:23+0100\n"
+"Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
+"Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2044,7 +2037,6 @@ msgstr ""
 
 # type: textblock
 #: debhelper.pod:252
-#, fuzzy
 msgid ""
 "Unless otherwise indicated, all debhelper documentation assumes that you are "
 "using the most recent compatibility level, and in most cases does not "
