--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.12) unstable; urgency=low
+
+  * dh_installdocs: document that -X affects doc-base file installation.
+    Closes: #345291
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 30 Dec 2005 14:27:14 -0500
+
 debhelper (5.0.11) unstable; urgency=low
 
   * French translation update. Closes: #344133
