r1836: * debhelper(7): document previous dh_install v5 change re wildcarding.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -346,6 +346,10 @@ symbols in, not the packages to take the symbols from.
 
 dh_installdocs skips installing empty files.
 
+=item -
+
+dh_install errors out if wildcards expand to nothing.
+
 =back
 
 =back
