--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.13) UNRELEASED; urgency=low
+
+  * debhelper(7): document previous dh_install v5 change re wildcarding.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 31 Dec 2005 13:48:08 -0500
+
 debhelper (5.0.12) unstable; urgency=low
 
   * dh_installdocs: document that -X affects doc-base file installation.
