--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 debhelper (5.0.13) UNRELEASED; urgency=low
 
   * debhelper(7): document previous dh_install v5 change re wildcarding.
+  * dh_link: add special case handling for paths to a directory containing the
+    link. Closes: #346405
+  * dh_link: add special case handling for link to /
 
- -- Joey Hess <joeyh@debian.org>  Sat, 31 Dec 2005 13:48:08 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat,  7 Jan 2006 23:06:43 -0500
 
 debhelper (5.0.12) unstable; urgency=low
 
