--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-debhelper (5.0.13) UNRELEASED; urgency=low
+debhelper (5.0.13) unstable; urgency=low
 
   [ Joey Hess ]
+  * debhelper svn moved to alioth
   * debhelper(7): document previous dh_install v5 change re wildcarding.
   * dh_link: add special case handling for paths to a directory containing the
     link. Closes: #346405
@@ -14,7 +15,7 @@ debhelper (5.0.13) UNRELEASED; urgency=low
   * dh_gconf: add support for debian/package.gconf-defaults, to provide
     defaults for a package without patching the schemas.
 
- -- Joey Hess <joeyh@debian.org>  Sat,  7 Jan 2006 23:28:44 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat,  7 Jan 2006 23:34:26 -0500
 
 debhelper (5.0.12) unstable; urgency=low
 
