--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.15) unstable; urgency=low
+
+  * Fix ghastly option parsing error in last release that broke
+    --noscripts (-n was ok). Thanks, Marc Haber. Closes: #347577
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 11 Jan 2006 12:38:41 -0500
+
 debhelper (5.0.14) unstable; urgency=low
 
   * dh_installinit: If run with -o, do the inverse of -n and only
