--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.16) unstable; urgency=low
+
+  * Fix dangling markup in dh_installinit pod. Closes: #348073
+  * Updated French translation from Valéry Perrin. Closes: #348074
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Jan 2006 17:29:27 -0500
+
 debhelper (5.0.15) unstable; urgency=low
 
   * Fix ghastly option parsing error in last release that broke
