r1856: * dh_python: Temporarily revert change in 5.0.13 to make use of   python-support for packages providing private modules or python-only   modules, since python policy hasn't been updated for this yet.   Closes: #347758

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (5.0.17) unstable; urgency=low
+
+  * dh_python: Temporarily revert change in 5.0.13 to make use of
+    python-support for packages providing private modules or python-only
+    modules, since python policy hasn't been updated for this yet.
+    Closes: #347758
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Jan 2006 17:39:20 -0500
+
 debhelper (5.0.16) unstable; urgency=low
 
   * Fix dangling markup in dh_installinit pod. Closes: #348073
