r1858: * Improved po4a cleaning. Closes: #348521

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.18) UNRELEASED; urgency=low
+
+  * Improved po4a cleaning. Closes: #348521
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 18 Jan 2006 16:12:13 -0500
+
 debhelper (5.0.17) unstable; urgency=low
 
   * dh_python: Temporarily revert change in 5.0.13 to make use of
