--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.18) UNRELEASED; urgency=low
+debhelper (5.0.18) unstable; urgency=low
 
   * Improved po4a cleaning. Closes: #348521
   * Reverted change in 4.1.9, so generation of EXCLUDE_FIND escapes "." to
@@ -8,7 +8,7 @@ debhelper (5.0.18) UNRELEASED; urgency=low
     via complex_doit(), which was not the case of dh_clean when this change
     was originally made.) Closes: #349070
 
- -- Joey Hess <joeyh@debian.org>  Fri, 20 Jan 2006 16:56:00 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri, 20 Jan 2006 17:09:31 -0500
 
 debhelper (5.0.17) unstable; urgency=low
 
