--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.19) unstable; urgency=low
+
+  * dh_installman: add support for --language option to override man page
+    language guessing. Closes: #193221
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 23 Jan 2006 18:52:00 -0500
+
 debhelper (5.0.18) unstable; urgency=low
 
   * Improved po4a cleaning. Closes: #348521
