--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.20) unstable; urgency=low
+
+  * Minor bug fix from last release.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 23 Jan 2006 20:29:10 -0500
+
 debhelper (5.0.19) unstable; urgency=low
 
   * dh_installman: add support for --language option to override man page
