--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.21) unstable; urgency=low
+
+  * dh_installman: correct mistake that broke translated man page installation
+    Closes: #349995
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Jan 2006 12:32:44 -0500
+
 debhelper (5.0.20) unstable; urgency=low
 
   * Minor bug fix from last release.
