--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.22) UNRELEASED; urgency=low
+
+  * dh_makeshlibs: add support for adding udeb: lines to shlibs file
+    via --add-udeb parameter. Closes: #345471
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Jan 2006 12:53:00 -0500
+
 debhelper (5.0.21) unstable; urgency=low
 
   * dh_installman: correct mistake that broke translated man page installation
