--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (5.0.22) UNRELEASED; urgency=low
+debhelper (5.0.22) unstable; urgency=low
 
   * dh_makeshlibs: add support for adding udeb: lines to shlibs file
     via --add-udeb parameter. Closes: #345471
   * dh_shlibdeps: pass -tudeb to dpkg-shlibdeps for udebs. Closes: #345472
   * Depends on dpkg-dev 1.13.13 for dh_shlibdeps change.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Jan 2006 13:01:00 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Jan 2006 13:04:53 -0500
 
 debhelper (5.0.21) unstable; urgency=low
 
