r1875: * dh_strip: remove binutils build-dep lines since stable has a new enough   version. Closes: #350607

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.23) UNRELEASED; urgency=low
+
+  * dh_strip: remove binutils build-dep lines since stable has a new enough
+    version. Closes: #350607
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 30 Jan 2006 16:57:21 -0500
+
 debhelper (5.0.22) unstable; urgency=low
 
   * dh_makeshlibs: add support for adding udeb: lines to shlibs file
