r1881: * Add dh_installudev by Marco d'Itri.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.24) unstable; urgency=low
+
+  * Add dh_installudev by Marco d'Itri.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 23 Feb 2006 11:40:22 -0500
+
 debhelper (5.0.23) unstable; urgency=low
 
   * dh_strip: remove binutils build-dep lines since stable has a new enough
