--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
 debhelper (5.0.24) unstable; urgency=low
 
+  [ Joey Hess ]
   * Add dh_installudev by Marco d'Itri.
+
+  [ vperrin forgot to add this to the changelog when committing ]
+  * Update pot file and french translation with recent changes in
+     the dh_installdebconf manpage
+  * Add -f option to force .pot file re-building. This is in waiting
+    a patch, correcting a bug in po4a_0.23.1
+  * Add --rm-backups in clean: Otherwise ll.po~ are included in the
+    source package. (see debhelper_5.0.22.tar.gz)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 23 Feb 2006 11:40:22 -0500
 
