--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.25) UNRELEASED; urgency=low
+
+  * dh_installdebconf: For udebs, misc:Depends will now contain cdebconf-udeb.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 15 Mar 2006 16:12:20 -0500
+
 debhelper (5.0.24) unstable; urgency=low
 
   [ Joey Hess ]
