--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.27) UNRELEASED; urgency=low
+
+  * Typo. Closes: #358904
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 25 Mar 2006 13:40:28 -0500
+
 debhelper (5.0.26) unstable; urgency=high
 
   * dh_installinit: Fix badly generated code in maint scripts that used
