r1892: * dh_install: swap two paras in man page for clarity. Closes: #359182

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 debhelper (5.0.27) UNRELEASED; urgency=low
 
   * Typo. Closes: #358904
+  * dh_install: swap two paras in man page for clarity. Closes: #359182
 
- -- Joey Hess <joeyh@debian.org>  Sat, 25 Mar 2006 13:40:28 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 27 Mar 2006 14:05:58 -0500
 
 debhelper (5.0.26) unstable; urgency=high
 
