r1893: * Update pot file and french translation with recent changes in dh_installdirs and dh_movefiles manpages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 debhelper (5.0.27) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Typo. Closes: #358904
   * dh_install: swap two paras in man page for clarity. Closes: #359182
+
+  [ Valery Perrin ]
+  * Update pot file and french translation with recent changes in
+    dh_installdirs and dh_movefiles manpages
 
  -- Joey Hess <joeyh@debian.org>  Mon, 27 Mar 2006 14:05:58 -0500
 
