--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-03-22 19:43-0500\n"
+"POT-Creation-Date: 2006-03-28  9:24+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2159,17 +2159,17 @@ msgstr ""
 # type: textblock
 #: dh_installdirs:21
 msgid ""
+"A file named debian/package.dirs can list directories to be created.  "
+"Separate the directory names with whitespace."
+msgstr ""
+
+# type: textblock
+#: dh_installdirs:24
+msgid ""
 "Any directory names specified as parameters will be created in the package "
 "build directory of the first package dh_installdirs is told to act on. By "
 "default, this is the first binary package in debian/control, but if you use "
 "-p, -i, or -a flags, it will be the first package specified by those flags."
-msgstr ""
-
-# type: textblock
-#: dh_installdirs:26
-msgid ""
-"A file named debian/package.dirs can list other directories to be created.  "
-"Separate the directory names with whitespace."
 msgstr ""
 
 # type: textblock
@@ -3304,7 +3304,7 @@ msgstr ""
 msgid ""
 "Instead of moving files out of debian/tmp (the default), this option makes "
 "it move files out of some other directory. Since the entire contents of the "
-"sourcedir is moved, specifiying something like --sourcedir=/ is very unsafe, "
+"sourcedir is moved, specifying something like --sourcedir=/ is very unsafe, "
 "so to prevent mistakes, the sourcedir must be a relative filename; it cannot "
 "begin with a `/'."
 msgstr ""
