--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
-"POT-Creation-Date: 2006-02-22 12:52+0100\n"
-"PO-Revision-Date: 2006-02-22 13:44+0100\n"
+"POT-Creation-Date: 2006-03-28  9:06+0200\n"
+"PO-Revision-Date: 2006-03-28 09:11+0200\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2959,6 +2959,16 @@ msgstr ""
 # type: textblock
 #: dh_installdirs:21
 msgid ""
+"A file named debian/package.dirs can list directories to be created.  "
+"Separate the directory names with whitespace."
+msgstr ""
+"Un fichier nommé debian/paquet.dirs peut énumérer d'autres répertoires à "
+"créer. Les noms des répertoires doivent être séparés par un blanc "
+"(whitespace)."
+
+# type: textblock
+#: dh_installdirs:24
+msgid ""
 "Any directory names specified as parameters will be created in the package "
 "build directory of the first package dh_installdirs is told to act on. By "
 "default, this is the first binary package in debian/control, but if you use -"
@@ -2969,16 +2979,6 @@ msgstr ""
 "défaut, il s'agit du premier paquet indiqué dans le fichier debian/control, "
 "mais, si les options -p, -i ou -a sont utilisées, il s'agira du premier "
 "paquet indiqué par ces options."
-
-# type: textblock
-#: dh_installdirs:26
-msgid ""
-"A file named debian/package.dirs can list other directories to be created.  "
-"Separate the directory names with whitespace."
-msgstr ""
-"Un fichier nommé debian/paquet.dirs peut énumérer d'autres répertoires à "
-"créer. Les noms des répertoires doivent être séparés par un blanc "
-"(whitespace)."
 
 # type: textblock
 #: dh_installdirs:29
@@ -4519,7 +4519,7 @@ msgstr "B<--sourcedir=>I<répertoire>"
 msgid ""
 "Instead of moving files out of debian/tmp (the default), this option makes "
 "it move files out of some other directory. Since the entire contents of the "
-"sourcedir is moved, specifiying something like --sourcedir=/ is very unsafe, "
+"sourcedir is moved, specifying something like --sourcedir=/ is very unsafe, "
 "so to prevent mistakes, the sourcedir must be a relative filename; it cannot "
 "begin with a `/'."
 msgstr ""
