r1894: * dh_installman: die with an error if a man page read for so lines fails   Closes: #359020

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (5.0.27) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Typo. Closes: #358904
   * dh_install: swap two paras in man page for clarity. Closes: #359182
+  * dh_installman: die with an error if a man page read for so lines fails
+    Closes: #359020
 
   [ Valery Perrin ]
   * Update pot file and french translation with recent changes in
