--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.27) UNRELEASED; urgency=low
+debhelper (5.0.27) unstable; urgency=low
 
   [ Joey Hess ]
   * Typo. Closes: #358904
@@ -10,7 +10,7 @@ debhelper (5.0.27) UNRELEASED; urgency=low
   * Update pot file and french translation with recent changes in
     dh_installdirs and dh_movefiles manpages
 
- -- Joey Hess <joeyh@debian.org>  Mon, 27 Mar 2006 14:05:58 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 30 Mar 2006 15:22:12 -0500
 
 debhelper (5.0.26) unstable; urgency=high
 
