r1897: * dh_makeshlibs: Fix udeb package name regexp. Closes: #361677

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.28) unstable; urgency=low
+
+  * dh_makeshlibs: Fix udeb package name regexp. Closes: #361677
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  9 Apr 2006 13:05:50 -0400
+
 debhelper (5.0.27) unstable; urgency=low
 
   [ Joey Hess ]
