r1904:   * Update french translation with recents changes in dh_installxfonts, dh_link and dh_compress manpages   * Delete -f option in po4a command line. Bug in po4a has been corrected in new version (0.24.1).   * Change build-depends for po4a. New version (0.24.1).   * Add code for removing empty "lang" directories into man/ when cleaning.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (5.0.31) UNRELEASED; urgency=low
+
+  [ Valery Perrin ]
+  * Update french translation with recents changes in dh_installxfonts,
+    dh_link and dh_compress manpages
+  * Delete -f option in po4a command line. Bug in po4a has been corrected in
+    new version (0.24.1).
+  * Change build-depends for po4a. New version (0.24.1).
+  * Add code for removing empty "lang" directories into man/ when cleaning.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 14 Apr 2006 11:04:23 +0200
+
 debhelper (5.0.30) unstable; urgency=low
 
   * Convert the "I have no packages to build" error into a warning. Am I
