--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-04-13 10:48+0200\n"
+"POT-Creation-Date: 2006-04-17 15:59-0400\n"
 "PO-Revision-Date: 2005-09-18 00:11+0200\n"
 "Last-Translator: Rubén Porras Campo <debian-l10n-spanish@lists.debian.org>\n"
 "Language-Team: SPANISH <debian-l10n-spanish@lists.debian.org>\n"
@@ -5148,12 +5148,13 @@ msgstr ""
 
 # type: textblock
 #: dh_installxfonts:22
+#, fuzzy
 msgid ""
 "Before calling this program, you should have installed any X fonts provided "
 "by your package into the appropriate location in the package build "
 "directory, and if you have fonts.alias or fonts.scale files, you should "
-"install them into the correct location under etc/X11/fonts in your package "
-"build directory."
+"install them into the correct location under etc/X11/fonts/X11R7 in your "
+"package build directory."
 msgstr ""
 "Antes de llamar a este programa, debe tener instalados los tipos de letra "
 "para X proporcionados por el paquete en el lugar apropiado del directorio de "
