--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
-"POT-Creation-Date: 2006-04-13 10:48+0200\n"
+"POT-Creation-Date: 2006-04-17 15:59-0400\n"
 "PO-Revision-Date: 2006-04-14 11:15+0200\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -5268,12 +5268,13 @@ msgstr ""
 
 # type: textblock
 #: dh_installxfonts:22
+#, fuzzy
 msgid ""
 "Before calling this program, you should have installed any X fonts provided "
 "by your package into the appropriate location in the package build "
 "directory, and if you have fonts.alias or fonts.scale files, you should "
-"install them into the correct location under etc/X11/fonts in your package "
-"build directory."
+"install them into the correct location under etc/X11/fonts/X11R7 in your "
+"package build directory."
 msgstr ""
 "Avant d'exécuter ce programme, il est nécessaire d'avoir installé, dans "
 "l'emplacement adéquat du répertoire de construction du paquet, toutes les "
