--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-04-14  0:39+0200\n"
+"POT-Creation-Date: 2006-04-17 15:59-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3853,8 +3853,8 @@ msgid ""
 "Before calling this program, you should have installed any X fonts provided "
 "by your package into the appropriate location in the package build "
 "directory, and if you have fonts.alias or fonts.scale files, you should "
-"install them into the correct location under etc/X11/fonts in your package "
-"build directory."
+"install them into the correct location under etc/X11/fonts/X11R7 in your "
+"package build directory."
 msgstr ""
 
 # type: textblock
