--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.31) UNRELEASED; urgency=low
+debhelper (5.0.31) unstable; urgency=low
 
   [ Valery Perrin ]
   * Update french translation with recents changes in dh_installxfonts,
@@ -18,7 +18,7 @@ debhelper (5.0.31) UNRELEASED; urgency=low
   * dh_installudev: correct documentation for --name. Closes: #363028
   * Fix broken directory removal code.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 17 Apr 2006 16:01:11 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 17 Apr 2006 16:12:41 -0400
 
 debhelper (5.0.30) unstable; urgency=low
 
